fixed docker confs

--- a/service/Dockerfile
+++ b/service/Dockerfile
@@ -4,8 +4,9 @@ WORKDIR /usr/src/app
 
 COPY package.json ./
 COPY yarn.lock ./
-COPY .npmrc ./
 
+RUN mkdir -r /usr/src/files
+RUN ls -la
 RUN yarn install --production
 
 COPY dist ./dist
@@ -15,5 +16,7 @@ COPY .env.production .env
 ENV NODE_ENV production
 
 EXPOSE 3000
+VOLUME /usr/src/files
+
 CMD [ "node", "dist/main.js" ]
 USER node
