--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
-version: '3.8'
+version: '3'
 
 services:
-  cache:
+  redis-db:
     image: redis:6.2.6-alpine
     container_name: redis
     restart: always
@@ -10,10 +10,21 @@ services:
     command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
     volumes:
       - ./redis-data:/data
+    networks:
+      - mynet
 
-#  service:
-#    image: service/Dockerfile
-#    restart: always
-#    command: redis-server --save 20 1 --loglevel warning --requirepass eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81
-#    volumes:
-#      - service:/usr/src/app
+  service:
+    container_name: file-tracker
+    build: service
+    restart: always
+    volumes:
+      - ./service:/usr/src/app
+      - /home/bob/WebstormProjects/todos/file-tracker/files:/usr/src/files
+    ports:
+      - "3000:3000"
+    networks:
+      - mynet
+
+networks:
+  mynet:
+    driver: bridge
