--- a/service/package.json
+++ b/service/package.json
@@ -27,10 +27,14 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/microservices": "^8.4.4",
     "@nestjs/platform-express": "^8.0.0",
+    "@nestjs/schedule": "^1.1.0",
     "@nestjs/terminus": "^8.0.6",
+    "@types/cron": "^1.7.3",
     "cache-manager": "^3.6.1",
     "cache-manager-redis-store": "^2.0.0",
+    "chokidar": "^3.5.3",
     "dotenv-safe": "^8.2.0",
+    "moment": "^2.29.3",
     "redis": "^3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
