--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
-# files
-/files
+files/
+
+# compiled output
+service/dist
+
+# OS
+.DS_Store
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
