--- a/service/.env.production
+++ b/service/.env.production
@@ -7,4 +7,5 @@ PORT=3000
 COMPONENT=file-tracker
 TRACING_DEBUG_ENABLED=true
 FILES_DIR=/usr/src/files
+# I would use some DB or file to get this IDs, but kept it simple here.
 CUSTOMER_IDS=1424,4323, 1194
